# xmlstar

./: .gitignore  AUTHORS  COPYING  Makefile.am  NEWS  README  TODO  autogen.sh  config.h.in  configure.ac  configure.in  usage2c.awk  xmlstarlet.spec.in
contrib/: xml_struct.sh
doc/: Makefile.am  doc.mk  gen-doc  replace-PROG-VERSION.xsl  xmlstar-fodoc-style.xsl  xmlstarlet-man.html  xmlstarlet-man.xml  xmlstarlet-ug.html  xmlstarlet-ug.ps  xmlstarlet-ug.xml  xmlstarlet.1  xmlstarlet.ps  xmlstarlet.txt
examples/: N-order  bigxml  bigxml-dtd  bigxml-embed  bigxml-embed-ref  bigxml-relaxng  bigxml-well-formed  bigxml-xsd  c14n-default-attr  c14n-newlines  c14n1  c14n2  command-help  count1  countnode1  delete1  depyx-bug120a  depyx-bug120b  docbook1  dtd1  dtd2  dtd3  dtd4  ed-2op  ed-append  ed-backref-delete  ed-backref1  ed-backref2  ed-expr  ed-insert  ed-literal  ed-move  ed-namespace  ed-nop  ed-subnode  elem-depth  elem-uniq  elem1  elem2  elem3  (+54 more)
examples/dtd/: bigxml.dtd  tab-obj.dtd  table.dtd
examples/html/: hello1.html
examples/j2ee/: web.xml
examples/rdf/: em.rdf
examples/relaxng/: address-bad.xml  bigxml.rng
examples/results/: bigxml-well-formed.out  bigxml.out  c14n-default-attr.out  c14n1.out  c14n2.out  command-help.out  countnode1.out  delete1.out  depyx-bug120a.out  depyx-bug120b.out  docbook1.out  dtd3.out  dtd4.out  ed-2op.out  ed-append.out  ed-backref-delete.out  ed-backref1.out  ed-backref2.out  ed-expr.out  ed-insert.out  ed-literal.out  ed-move.out  ed-namespace.out  ed-nop.out  ed-subnode.out  elem-depth.out  elem-uniq.out  elem1.out  elem2.out  elem3.out  escape1.out  exec.out  exslt-ed.out  external-entity.out  findfile1.out  genxml1.out  move1.out  noindent1.out  ns1.out  proc-filterline.out  (+26 more)
examples/sgml/: docbook1.sgml
examples/vxml/: root.vxml
examples/wsdl/: quote.wsdl
examples/xmi/: example.xmi
examples/xml/: S0.xml  books.xml  c14n-default-attr.xml  c14n.xml  c14n.xpath  disclaimer.xml  document.xml  external-pe.xml  foo.dtd  foo.xml  malformed.xml  structure.xml  tab-bad.xml  tab-obj.xml  table.xml  unicode.xml  unsorted.xml  xmlstarlet-pad.xml  xmlstarlet-xsa.xml
examples/xsd/: bigxml.xsd  table.xsd
examples/xsl/: cat.xsl  hello1.xsl  param1.xsl  sum1.xsl
examples/xsp/: dynamic.xsp
examples/xsql/: jobserve.xsql
examples/xupdate/: insxml.xup
m4/: quiet-rule.m4  xstar-check-libs.m4
mingw/: GNUmakefile  README.txt  config.iconv  config.libxml2  config.libxslt  config.xmlstarlet  make.zlib  versions.mk
solaris/package/sol8-sparc/: build  pkginfo  pkginfo.in  prototype
solaris/package/sol9-sparc/: build  pkginfo.in
src/: Makefile.am  binsert.c  binsert.h  c14n-usage.txt  depyx-usage.txt  edit-usage.txt  elem-usage.txt  escape-usage.txt  escape.h  format-usage.txt  ls-usage.txt  process-forkexec.c  process.h  pyx-usage.txt  select-usage.txt  sources.mk  stack.c  stack.h  strdup.c  strdup.h  trans-usage.txt  trans.c  trans.h  unescape-usage.txt  usage.txt  validate-usage.txt  xfun.c  xfun.h  xml.c  xml_C14N.c  xml_depyx.c  xml_edit.c  xml_elem.c  xml_escape.c  xml_format.c  xml_ls.c  xml_pyx.c  xml_select.c  xml_trans.c  xml_validate.c  (+1 more)
tests/: runAllTests.sh  runTest.sh  runTests
