AC_INIT(src/xml.c)

VERSION=0.0.1
PACKAGE=xmlstarlet

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

CFLAGS="-Wall -g -pedantic"
EXTRA_LIBS=

dnl
dnl The following parameters offer
dnl the ability to specify the location of the libxml
dnl library during linking and compilation.
dnl
LIBXML_PREFIX="/usr"
AC_ARG_WITH(libxml-prefix,
        [  --with-libxml-prefix=[PFX]		Specify location of libxml],
	LIBXML_PREFIX=$withval
)
        
AC_ARG_WITH(libxml-include-prefix,
        [  --with-libxml-include-prefix=[PFX]	Specify location of libxml headers],
        LIBXML_CFLAGS="-I$withval"
)

AC_ARG_WITH(libxml-libs-prefix,
        [  --with-libxml-libs-prefix=[PFX]	Specify location of libxml libs],
        LIBXML_LIBS="$withval/libxml2.a -lz -lm"
)

dnl
dnl Check the environment
dnl

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_ARG_PROGRAM
AM_PROG_LIBTOOL

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl
dnl Set LIBXML include path
dnl
if test "x$LIBXML_CFLAGS" = "x"
then
	LIBXML_CFLAGS="-I${LIBXML_PREFIX}/include/libxml2"
fi

dnl
dnl Set LIBXML libraries location
dnl
if test "x$LIBXML_LIBS" = "x"
then
	LIBXML_LIBS="${LIBXML_PREFIX}/lib/libxml2.a -lz -lm"
fi

AC_SUBST(EXTRA_LIBS)
AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_CFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
])

