AC_INIT(src/xml.c)

VERSION=0.0.1
PACKAGE=xmlstarlet

AM_INIT_AUTOMAKE($PACKAGE, $VERSION, no-define)
AM_MAINTAINER_MODE

CFLAGS="-Wall -g -pedantic"
EXTRA_LIBS=

dnl
dnl The following parameters offer
dnl the ability to specify the location of the libxml
dnl library during linking and compilation.
dnl
LIBXML_PREFIX="/usr"
AC_ARG_WITH(libxml-prefix,
        [  --with-libxml-prefix=[PFX]		Specify location of libxml],
	LIBXML_PREFIX=$withval
)
        
AC_ARG_WITH(libxml-include-prefix,
        [  --with-libxml-include-prefix=[PFX]	Specify location of libxml headers],
        LIBXML_CFLAGS="-I$withval/libxml2 -I$withval/libxml -I$withval"
)

AC_ARG_WITH(libxml-libs-prefix,
        [  --with-libxml-libs-prefix=[PFX]	Specify location of libxml libs],
        LIBXML_LIBS="$withval/libxml2.a -lz -lm -lsocket  -lnsl"
)

dnl
dnl The following parameters offer
dnl the ability to specify the location of the libxslt
dnl library during linking and compilation.
dnl
LIBXSLT_PREFIX="/usr"
AC_ARG_WITH(libxslt-prefix,
        [  --with-libxslt-prefix=[PFX]		Specify location of libxslt],
	LIBXSLT_PREFIX=$withval
)
        
AC_ARG_WITH(libxslt-include-prefix,
        [  --with-libxslt-include-prefix=[PFX]	Specify location of libxslt headers],
        LIBXSLT_CFLAGS="-I$withval/libxslt -I$withval/libexslt -I$withval"
)

AC_ARG_WITH(libxslt-libs-prefix,
        [  --with-libxslt-libs-prefix=[PFX]	Specify location of libxslt libs],
        LIBXSLT_LIBS="$withval/libxslt.a $withval/libexslt.a -lz -lm"
)

dnl
dnl Check the environment
dnl

AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_ARG_PROGRAM
dnl AM_PROG_LIBTOOL

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)
AC_SUBST(LDFLAGS)

dnl
dnl Set LIBXML include path
dnl
if test "x$LIBXML_CFLAGS" = "x"
then
	LIBXML_CFLAGS="-I${LIBXML_PREFIX}/include/libxml2"
fi

dnl
dnl Set LIBXML libraries location
dnl
if test "x$LIBXML_LIBS" = "x"
then
	LIBXML_LIBS="${LIBXML_PREFIX}/lib/libxml2.a -lz -lm"
fi

dnl
dnl Set LIBXSLT include path
dnl
if test "x$LIBXSLT_CFLAGS" = "x"
then
	LIBXSLT_CFLAGS="-I${LIBXSLT_PREFIX}/include/libxslt -I${LIBXSLT_PREFIX}/include/libiexslt"
fi

dnl
dnl Set LIBXSLT libraries location
dnl
if test "x$LIBXSLT_LIBS" = "x"
then
	LIBXSLT_LIBS="${LIBXSLT_PREFIX}/lib/libxslt.a ${LIBXSLT_PREFIX}/lib/libexslt.a -lz -lm"
fi

AC_SUBST(EXTRA_LIBS)
AC_SUBST(LIBXML_LIBS)
AC_SUBST(LIBXML_CFLAGS)
AC_SUBST(LIBXSLT_LIBS)
AC_SUBST(LIBXSLT_CFLAGS)

rm -f COPYING
ln -s Copyright COPYING

AC_OUTPUT([
xmlstarlet.spec
Makefile
src/Makefile
])

